log/build_2023-03-23_13-55-02/ros2_sprite/stderr.log
  File "/home/ubuntu/ros2_ws/install/ros2_sprite/lib/python3.8/site-packages/ros2_sprite/API.py", line 55
    def main()
             ^
SyntaxError: invalid syntax

